--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ Flask==3.0.0
 PyQt5==5.15.10
 flask-cors==4.0.0
 requests==2.31.0
-supabase==2.3.0
+supabase
 python-dotenv==1.0.0
-numpy==1.24.3
+numpy
