--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#d2f8f8",
-        "activityBar.background": "#d2f8f8",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#ea75ea",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#d2f8f8",
-        "statusBar.background": "#a6f1f1",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#7aeaea",
-        "statusBarItem.remoteBackground": "#a6f1f1",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#a6f1f1",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#a6f1f199",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBar.activeBackground": "#571eb3",
+        "activityBar.background": "#571eb3",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#1b0d05",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#571eb3",
+        "statusBar.background": "#421787",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#571eb3",
+        "statusBarItem.remoteBackground": "#421787",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#421787",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#42178799",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#a6f1f1"
+    "peacock.color": "#421787"
 }
